--- a/README.Rmd
+++ b/README.Rmd
@@ -69,8 +69,8 @@ we provide a fully automated R script(AsgeneDB.R) from metagenomic alignment, su
 This is a basic example which shows you how to use the package:
 ``` r
 library(Asgene)
-#Arsenic metabolism gene abundance analysis**
+#Arsenic metabolism gene abundance analysis
 Asgene("abundance","./","diamond","./","nucl","fasta","./")
-#Arsenic metabolism taxonomy analysis**
+#Arsenic metabolism taxonomy analysis
 Asgene("taxonomy","./","diamond","./","nucl","fasta","./")
 ``` 
