--- a/README.Rmd
+++ b/README.Rmd
@@ -8,7 +8,7 @@ output: github_document
 ## Overview
 Arsenic (As) is a kind of toxic metal-like element widely distributed in the world. To understand the microbial community of arsenic metabolism in the environment, we developed a curated arsenic functional gene database (AsgeneDB) covering five arsenic metabolic pathways (transport, respiratory, reduction, oxidative and methylation processes), 59 arsenic biotransformation functional gene families and 414773 representative sequences. Here, protein sequences for As gene families were recruited from multiple public databases such as UniProt, NCBI RefSeq, KEGG, COG, eggNOG, arCOG and KOG. AsgeneDB covers 46 phyla and 1653 genera of bacterial, archaea and fungi. It can quickly analyze the arsenic metabolism and transformation function of microbial communities by integrating multiple lineal homology databases with high specificity, comprehensiveness, representativeness and accuracy.
 
-## Documentation (AsgeneDB)
+## AsgeneDB Documentation
 ### Database files
 **Database files can be downloaded from <https://de.cyverse.org/data/ds/iplant/home/xinwei/AsgeneDB>**
 
@@ -52,7 +52,9 @@ knitr::opts_chunk$set(
 )
 ```
 
-## Installation (Asgene Package)
+## Asgene Package
+
+### Installation 
 
 You can install the development version of Asgene from [GitHub](https://github.com/) with:
 
@@ -60,12 +62,12 @@ You can install the development version of Asgene from [GitHub](https://github.c
 # install.packages("devtools")
 devtools::install_github("XinweiSong/Asgene")
 ```
-## Usage
+### Usage
 **Description**:<br> 
 we provide Asgene Package for metagenomic alignment, subsequent gene family abundance statistics and sample abundance standardization. Users only need to choose a database search tool according to their needs (e.g., USEARCH BLAST DIAMOND) and input three parameters (working path, tool path, sequence type and extension of sequence file) to automatically analyze statistics and output statistical results. Users can select gene abundance statistics (Option: abundance) to normalize read counts per kilobase per million reads (RPKM) to eliminate differences in sequencing depth and reference sequence length between samples. In addition, if the user selects functional species statistics (Option: taxonomy), the driveing species of each arsenic metabolism gene at different classification levels in the sample can be generated automatically. 
 
 
-## Example
+### Example
 
 This is a basic example which shows you how to use the package:
 ``` r
