--- a/README.Rmd
+++ b/README.Rmd
@@ -77,3 +77,6 @@ Asgene("abundance","./","diamond","./","nucl","fasta","./")
 #Arsenic metabolism taxonomy analysis
 Asgene("taxonomy","./","diamond","./","nucl","fasta","./")
 ``` 
+#### **NOTE:**
+* Before you begin, place AsgeneDB files in the current working path.
+* You need to place a tab-separated file in your working path that contains the sample name and the number of sequences. Note that file extensions should not be included here.  For example: <https://github.com/XinweiSong/AsgeneDB/blob/main/sampleinfo.txt>
