--- a/README.Rmd
+++ b/README.Rmd
@@ -64,7 +64,7 @@ devtools::install_github("XinweiSong/Asgene")
 ```
 ### Usage
 **Description**:<br> 
-we provide Asgene Package for metagenomic alignment, subsequent gene family abundance statistics and sample abundance standardization. Users only need to choose a database search tool according to their needs (e.g., USEARCH BLAST DIAMOND) and input three parameters (working path, tool path, sequence type and extension of sequence file) to automatically analyze statistics and output statistical results. Users can select gene abundance statistics (Option: abundance) to normalize read counts per kilobase per million reads (RPKM) to eliminate differences in sequencing depth and reference sequence length between samples. In addition, if the user selects functional species statistics (Option: taxonomy), the driveing species of each arsenic metabolism gene at different classification levels in the sample can be generated automatically. 
+we provide Asgene Package for metagenomic alignment (nucleic acid or protein sequence), subsequent gene family abundance statistics and sample abundance standardization. Users only need to choose a database search tool according to their needs (e.g., USEARCH, BLAST and DIAMOND) and input three parameters (e.g., working path, search parameters of tool and filetype) to automatically analyze statistics and output statistical results. Users can select gene abundance statistics (Option: abundance) to normalize read counts per kilobase per million reads (RPKM) to eliminate differences in sequencing depth and reference sequence length between samples. In addition, if the user selects functional species statistics (Option: taxonomy), the driveing species of each arsenic metabolism gene at different classification levels in the sample can be generated automatically. 
 
 
 ### Example
