--- a/README.Rmd
+++ b/README.Rmd
@@ -3,7 +3,7 @@ output: github_document
 ---
 # AsgeneDB: A curated orthology arsenic metabolism gene database for metagenome annotation
 <br> **Description**: A manually curated arsenic functional gene database (AsgeneDB) and R package (Asgen package) are developed for rapid and accurate metagenomic analysis.<br> 
-<br> **Authors**: Xinwei Song, Yongguan Zhu, Yongming Luo, Bin Ma*, Jianming Xu <br> 
+<br> **Authors**: Xinwei Song, Yongguan Zhu, Yongming Luo, Jianming Xu, Bin Ma* <br> 
 
 ## Overview
 Arsenic (As) is a kind of toxic metal-like element widely distributed in the world. To understand the microbial community of arsenic metabolism in the environment, we developed a curated arsenic functional gene database (AsgeneDB) covering five arsenic metabolic pathways (transport, respiratory, reduction, oxidative and methylation processes), 59 arsenic biotransformation functional gene families and 414773 representative sequences. Here, protein sequences for As gene families were recruited from multiple public databases such as UniProt, NCBI RefSeq, KEGG, COG, eggNOG, arCOG and KOG. AsgeneDB covers 46 phyla and 1653 genera of bacterial, archaea and fungi. It can quickly analyze the arsenic metabolism and transformation function of microbial communities by integrating multiple lineal homology databases with high specificity, comprehensiveness, representativeness and accuracy. AsgeneDB and the associated R Package will greatly promote the study of arsenic metabolism in microbial communities in various environments.
