--- a/README.Rmd
+++ b/README.Rmd
@@ -79,4 +79,4 @@ Asgene(anlysis = "taxonomy", workdir = "./", method = "diamond", toolpath = "./"
 ``` 
 #### **NOTE:**
 * Before you begin, place AsgeneDB files in the current working path.
-* You need to place a tab-separated file in your working path that contains the sample name and the number of sequences. Note that file extensions should not be included here.  For example: <https://github.com/XinweiSong/AsgeneDB/blob/main/sampleinfo.txt>
+* You need to place a tab-separated file in your working path that contains the sample name and the number of sequences. Note that file extensions should not be included here.  For example: <https://data.cyverse.org/dav-anon/iplant/home/xinwei/AsgeneDB/sampleinfo.txt>
