--- a/README.Rmd
+++ b/README.Rmd
@@ -78,7 +78,7 @@ Asgene(anlysis = "abundance", workdir = "./", method = "diamond", toolpath = "./
 Asgene(anlysis = "taxonomy", workdir = "./", method = "diamond", toolpath = "./", search_parameters = "-e 1e-4 -p 28 --query-cover 80 --id 50",seqtype = "nucl", filetype = "fasta",PE = TRUE, out = "./")
 ``` 
 ### Output
-##### Arsenic metabolism gene abundance analysis
+##### Output 1
 ```{r pressure, echo=FALSE, fig.cap="Output of As metabolic gene abundance analysis", out.width = '50%'}
 knitr::include_graphics("/Users/xinweisong/Desktop/results1.png")
 ```
