--- a/README.Rmd
+++ b/README.Rmd
@@ -59,7 +59,7 @@ knitr::opts_chunk$set(
 You can install the development version of Asgene from [GitHub](https://github.com/) with:
 
 ``` r
-# install.packages("devtools")
+install.packages("devtools")
 devtools::install_github("XinweiSong/Asgene")
 ```
 ### Usage
