--- a/README.Rmd
+++ b/README.Rmd
@@ -10,14 +10,14 @@ Arsenic (As) is a kind of toxic metal-like element widely distributed in the wor
 
 ## AsgeneDB Documentation
 ### Database files
-**Database files can be downloaded from <https://de.cyverse.org/data/ds/iplant/home/xinwei/AsgeneDB>**
+##### 1. All database files are built into the Asgene R package. Therefore, when using Asgene R package to analyze metagenomic data, there is no need to download AsgeneDB separately.
+##### 2. In order to facilitate users to use the AsgeneDB individually for personalized analysis, AsgeneDB can be downloaded from <https://data.cyverse.org/dav-anon/iplant/home/xinwei/AsgeneDB/AsgeneDB.zip>.
+###### **AsgeneDB.zip details: includes 4 files**
+1) **AsgeneDB.fa**: Fasta format representative sequences obtained by clustering curated sequences at 100% sequence identity. This file can be used for "BLAST" searching arsenic genes in shotgun metagenomes.
 
-Four files are included in AsgeneDB.zip(<https://de.cyverse.org/data/ds/iplant/home/xinwei/AsgeneDB/AsgeneDB.zip>):
-1. **AsgeneDB.fa**: Fasta format representative sequences obtained by clustering curated sequences at 100% sequence identity. This file can be used for "BLAST" searching arsenic genes in shotgun metagenomes.
+2) **asgene.map**: A mapping file that maps sequence IDs to gene names, only sequences belonging to arsenic gene families are included. This file is used to generate arsenic gene profiles from BLAST-like results against the database.
 
-2. **asgene.map**: A mapping file that maps sequence IDs to gene names, only sequences belonging to arsenic gene families are included. This file is used to generate arsenic gene profiles from BLAST-like results against the database.
-
-3. **id_gene_tax_pathway_total.csv**: Species table of sequences in AsgeneDB. <br>
+3) **id_gene_tax_pathway_total.csv**: Species table of sequences in AsgeneDB. <br>
 
    **Columns included:**<br> 
    1. Gene name (colnames:gene) <br> 
@@ -32,10 +32,12 @@ Four files are included in AsgeneDB.zip(<https://de.cyverse.org/data/ds/iplant/h
    10. Genus classification of species (colnames:genus) <br> 
    11. Species classification of species (colnames:species) <br> 
 
-4. **length.txt**: The file contains the length of amino acid sequences in AsgeneDB for standardizing arsenic gene abundance statistics.
+4) **length.txt**: The file contains the length of amino acid sequences in AsgeneDB for standardizing arsenic gene abundance statistics.
 
 ## Dependent Tools
-1. **R Studio**
+1. **R Studio **
+* Depends: R ≥ 3.4.0
+* Imports: dplyr, seqinr
 2. **database searching tools:**<br> 
 * usearch: <https://www.drive5.com/usearch/download.html>
 * diamond: <https://github.com/bbuchfink/diamond/releases>
