--- a/README.Rmd
+++ b/README.Rmd
@@ -75,18 +75,24 @@ we provide Asgene Package for metagenomic alignment (nucleic acid or protein seq
 This is a basic example which shows you how to use the package:
 ``` r
 library(Asgene)
-#
 #Arsenic metabolism gene abundance analysis
 Asgene(anlysis = "abundance", workdir = "./", method = "diamond", toolpath = "./", search_parameters = "-e 1e-4 -p 28 --query-cover 80 --id 50",seqtype = "nucl", filetype = "fasta", PE = TRUE , output = "./")
 #Arsenic metabolism taxonomy analysis
-Asgene(anlysis = "taxonomy", workdir = "./", method = "diamond", toolpath = "./", search_parameters = "-e 1e-4 -p 28 --query-cover 80 --id 50",seqtype = "nucl", filetype = "fasta",PE = TRUE, output = "./")
+Asgene(anlysis = "taxonomy", workdir = "
+./", method = "diamond", toolpath = "./", search_parameters = "-e 1e-4 -p 28 --query-cover 80 --id 50",seqtype = "nucl", filetype = "fasta",PE = TRUE, output = "./")
+#Example datasets useing
+Asgene(anlysis = "abundance", workdir = "./", method = "diamond", toolpath = "./", search_parameters = "-e 1e-4 -p 28 --query-cover 80 --id 50",seqtype = "prot", output = "./", test.data = TRUE)
+Asgene(anlysis = "taxonomy", workdir = "./", method = "diamond", toolpath = "./", search_parameters = "-e 1e-4 -p 28 --query-cover 80 --id 50",seqtype = "prot", output = "./", test.data = TRUE)
 ``` 
 ### Output
 ##### Output 1
-```{r pressure, echo=FALSE, fig.cap="Output of As metabolic gene abundance analysis", out.height="10%",out.width = '20%'}
+```{r results1, echo=FALSE, fig.cap="Output of As metabolic gene abundance analysis", out.height="10%",out.width = '20%'}
 knitr::include_graphics("/Users/xinweisong/Desktop/results1.png")
+```
+##### Output 2
+```{r results2, echo=FALSE, fig.cap="Output of As metabolic taxonomy analysis", out.height="10%",out.width = '20%'}
+knitr::include_graphics("/Users/xinweisong/Desktop/results2.png")
 ```
 
 #### **NOTE:**
-* Before you begin, place AsgeneDB files in the current working path.
 * You need to place a tab-separated file in your working path that contains the sample name and the number of sequences. Note that file extensions should not be included here.  For example: <https://data.cyverse.org/dav-anon/iplant/home/xinwei/AsgeneDB/sampleinfo.txt>
